--- a/index.html
+++ b/index.html
@@ -2,8 +2,8 @@
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.0.3/jquery.min.js"></script>
     <script>
 var config = {
-    authShimUrl: "https://www.authshim.com:5000/oauth2/",
-    corsporxyUrl: "http://www.testapp.com:5002/corsproxy",
+    authShimUrl: "https://www.authshim.com/oauth2/",
+    corsporxyUrl: "http://www.authshim.com:5002/corsproxy",
     boxUrl: "https://api.box.com/2.0"
 }
 
